pridany obrazok, graf a vzorec

--- a/clanok.tex
+++ b/clanok.tex
@@ -15,7 +15,7 @@
 
 \pagestyle{headings}
 
-\title{Názov\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
+\title{Semestrálna práca MIP\thanks{Semestrálny projekt v predmete Metódy inžinierskej práce, ak. rok 2015/16, vedenie: Meno Priezvisko}} % meno a priezvisko vyučujúceho na cvičeniach
 
 \author{Meno Priezvisko\\[2pt]
 	{\small Slovenská technická univerzita v Bratislave}\\
@@ -46,7 +46,17 @@ Základný problém, ktorý bol naznačený v úvode, je podrobnejšie vysvetlen
 Dôležité súvislosti sú uvedené v častiach~\ref{dolezita} a~\ref{dolezitejsia}.
 Záverečné poznámky prináša časť~\ref{zaver}.
 
+\includegraphics[scale = 1.5]{diagram.pdf}
 
+\begin{tabular}{rc}
+Prvý riadok     &  Hodnota riadka \\
+Druhý riadok    & Hodnota riadka
+\end{tabular}
+
+
+\begin{displaymath}
+ax^2 + bx + c = 0
+\end{displaymath}
 
 \section{Nejaká časť} \label{nejaka}
 
@@ -59,8 +69,6 @@ Aj text môže byť prezentovaný ako obrázok. Stane sa z neho označný pláva
 \caption{Rozhodujúci argument.}
 \label{f:rozhod}
 \end{figure*}
-
-
 
 \section{Iná časť} \label{ina}
 
